# adobe-cmake-libs

./: .gitignore  CMakeLists.txt  Readme.md
123/: AIAssert.cpp  IAIArtMatcher.cpp  IAIArtSet.cpp  IAIArtboards.cpp  IAICharacterEncoding.cpp  IAIColorSpace.cpp  IAIDataFilter.cpp  IAIDictionary.cpp  IAIDocumentUtils.cpp  IAIFilePath.cpp  IAIGlobalUnicodeString.cpp  IAIRefAutoSuite.cpp  IAIRepeat.cpp  IAIStringFormatUtils.cpp  IAIUnicodeString.cpp
include/: AESDK.cmake  AISDK.cmake  PRSDK.cmake  ResBuild.cmake
